添加知识库zip文件格式上传 操作人:孙哲文