@@ -29,32 +29,25 @@ import org.apache.poi.xwpf.usermodel.XWPFDocument;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
+import org.springframework.http.MediaType;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.util.FileSystemUtils;
 import org.springframework.util.StringUtils;
 import org.springframework.web.multipart.MultipartFile;
 
+import java.io.BufferedInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URLConnection;
+import java.io.OutputStream;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.nio.file.StandardCopyOption;
+import java.nio.file.*;
 import java.security.MessageDigest;
-import java.security.NoSuchAlgorithmException;
 import java.time.Instant;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.HashSet;
-import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-import java.util.UUID;
+import java.util.*;
 import java.util.zip.ZipEntry;
+import java.util.zip.ZipInputStream;
 import java.util.zip.ZipOutputStream;
 
 @Service
@@ -81,23 +74,22 @@ public class KnowledgeBaseServiceImpl implements KnowledgeBaseService {
     public KnowledgeBase createKnowledgeBase(KnowledgeBaseCreateRequest request) {
         validateKnowledgeBaseRequest(request);
 
+        Instant now = Instant.now();
         KnowledgeBase entity = new KnowledgeBase();
         entity.setScopeType(request.getScopeType() == null ? KnowledgeBase.ScopeType.PERSONAL : request.getScopeType());
         entity.setProjectId(request.getProjectId());
         entity.setOwnerId(request.getOwnerId());
-        entity.setName(request.getName().trim());
+        entity.setName(trimToNull(request.getName()));
         entity.setDescription(trimToNull(request.getDescription()));
         entity.setSourceType(request.getSourceType() == null ? KnowledgeBase.SourceType.MANUAL : request.getSourceType());
-        entity.setEmbeddingProvider(trimToNull(request.getEmbeddingProvider()));
-        entity.setEmbeddingModel(trimToNull(request.getEmbeddingModel()));
         entity.setChunkStrategy(request.getChunkStrategy() == null ? KnowledgeBase.ChunkStrategy.PARAGRAPH : request.getChunkStrategy());
-        entity.setDefaultTopK(normalizeTopK(request.getDefaultTopK()));
+        entity.setDefaultTopK(request.getDefaultTopK() == null ? DEFAULT_TOP_K : request.getDefaultTopK());
         entity.setVisibility(request.getVisibility() == null ? KnowledgeBase.Visibility.PRIVATE : request.getVisibility());
         entity.setStatus(KnowledgeBase.Status.DRAFT);
         entity.setDocCount(0);
         entity.setChunkCount(0);
-        entity.setCreatedAt(Instant.now());
-        entity.setUpdatedAt(Instant.now());
+        entity.setCreatedAt(now);
+        entity.setUpdatedAt(now);
 
         KnowledgeBase saved = knowledgeBaseRepository.save(entity);
         ensureOwnerMember(saved);
@@ -111,40 +103,15 @@ public class KnowledgeBaseServiceImpl implements KnowledgeBaseService {
         }
 
         KnowledgeBase entity = getById(id);
-
-        if (request.getScopeType() != null) {
-            entity.setScopeType(request.getScopeType());
-        }
-        if (request.getProjectId() != null) {
-            entity.setProjectId(request.getProjectId());
-        }
-        if (request.getOwnerId() != null) {
-            entity.setOwnerId(request.getOwnerId());
-        }
-        if (StringUtils.hasText(request.getName())) {
-            entity.setName(request.getName().trim());
-        }
-        if (request.getDescription() != null) {
-            entity.setDescription(trimToNull(request.getDescription()));
-        }
-        if (request.getSourceType() != null) {
-            entity.setSourceType(request.getSourceType());
-        }
-        if (request.getEmbeddingProvider() != null) {
-            entity.setEmbeddingProvider(trimToNull(request.getEmbeddingProvider()));
-        }
-        if (request.getEmbeddingModel() != null) {
-            entity.setEmbeddingModel(trimToNull(request.getEmbeddingModel()));
-        }
-        if (request.getChunkStrategy() != null) {
-            entity.setChunkStrategy(request.getChunkStrategy());
-        }
-        if (request.getDefaultTopK() != null) {
-            entity.setDefaultTopK(normalizeTopK(request.getDefaultTopK()));
-        }
-        if (request.getVisibility() != null) {
-            entity.setVisibility(request.getVisibility());
-        }
+        if (request.getScopeType() != null) entity.setScopeType(request.getScopeType());
+        if (request.getProjectId() != null) entity.setProjectId(request.getProjectId());
+        if (request.getOwnerId() != null) entity.setOwnerId(request.getOwnerId());
+        if (StringUtils.hasText(request.getName())) entity.setName(trimToNull(request.getName()));
+        if (request.getDescription() != null) entity.setDescription(trimToNull(request.getDescription()));
+        if (request.getSourceType() != null) entity.setSourceType(request.getSourceType());
+        if (request.getChunkStrategy() != null) entity.setChunkStrategy(request.getChunkStrategy());
+        if (request.getDefaultTopK() != null) entity.setDefaultTopK(request.getDefaultTopK());
+        if (request.getVisibility() != null) entity.setVisibility(request.getVisibility());
         entity.setUpdatedAt(Instant.now());
 
         KnowledgeBase saved = knowledgeBaseRepository.save(entity);
@@ -176,23 +143,23 @@ public class KnowledgeBaseServiceImpl implements KnowledgeBaseService {
         validateDocumentRequest(request);
 
         KnowledgeBase knowledgeBase = getById(knowledgeBaseId);
+        Instant now = Instant.now();
+
         KnowledgeDocument entity = new KnowledgeDocument();
         entity.setKnowledgeBase(knowledgeBase);
         entity.setSourceType(request.getSourceType() == null ? KnowledgeDocument.SourceType.MANUAL : request.getSourceType());
         entity.setSourceRefId(request.getSourceRefId());
         entity.setSourceUrl(trimToNull(request.getSourceUrl()));
-        entity.setTitle(resolveDocumentTitle(request.getTitle(), null, request.getContentText()));
+        entity.setTitle(resolveDocumentTitle(request.getTitle(), request.getFileName(), request.getContentText()));
         entity.setFileName(trimToNull(request.getFileName()));
         entity.setMimeType(trimToNull(request.getMimeType()));
-        entity.setStoragePath(null);
         entity.setContentText(normalizeContent(request.getContentText()));
-        entity.setContentHash(StringUtils.hasText(request.getContentHash()) ? request.getContentHash().trim() : sha256(entity.getContentText()));
+        entity.setContentHash(StringUtils.hasText(request.getContentHash()) ? trimToNull(request.getContentHash()) : sha256(entity.getContentText()));
         entity.setLanguage(trimToNull(request.getLanguage()));
-        entity.setErrorMessage(null);
         entity.setUploadedBy(request.getUploadedBy());
         entity.setStatus(KnowledgeDocument.Status.UPLOADED);
-        entity.setCreatedAt(Instant.now());
-        entity.setUpdatedAt(Instant.now());
+        entity.setCreatedAt(now);
+        entity.setUpdatedAt(now);
 
         return persistDocumentAndMaybeIndex(knowledgeBase, entity, shouldAutoIndex(request));
     }
@@ -219,6 +186,84 @@ public class KnowledgeBaseServiceImpl implements KnowledgeBaseService {
     }
 
     @Override
+    public List<KnowledgeDocument> uploadZipDocuments(Long knowledgeBaseId, MultipartFile file, KnowledgeDocumentCreateRequest request) {
+        KnowledgeBase knowledgeBase = getById(knowledgeBaseId);
+        if (file == null || file.isEmpty()) {
+            throw new IllegalArgumentException("ZIP 文件不能为空");
+        }
+
+        String zipName = sanitizeFileName(file.getOriginalFilename());
+        if (!zipName.toLowerCase(Locale.ROOT).endsWith(".zip")) {
+            throw new IllegalArgumentException("只支持 .zip 文件");
+        }
+
+        Path tempDir = null;
+        List<KnowledgeDocument> results = new ArrayList<>();
+        long totalBytes = 0L;
+        int fileCount = 0;
+        final long maxTotalBytes = 200L * 1024 * 1024;
+        final long maxEntryBytes = 10L * 1024 * 1024;
+        final int maxFileCount = 2000;
+
+        try {
+            tempDir = Files.createTempDirectory("kb-zip-" + knowledgeBaseId + "-");
+
+            try (ZipInputStream zis = new ZipInputStream(new BufferedInputStream(file.getInputStream()), StandardCharsets.UTF_8)) {
+                ZipEntry entry;
+                while ((entry = zis.getNextEntry()) != null) {
+                    if (entry.isDirectory()) {
+                        continue;
+                    }
+
+                    String entryName = normalizeZipEntryName(entry.getName());
+                    if (!StringUtils.hasText(entryName) || shouldSkipProjectEntry(entryName)) {
+                        continue;
+                    }
+
+                    Path extractedPath = tempDir.resolve(entryName).normalize();
+                    if (!extractedPath.startsWith(tempDir)) {
+                        throw new RuntimeException("非法 ZIP 路径: " + entryName);
+                    }
+
+                    if (extractedPath.getParent() != null) {
+                        Files.createDirectories(extractedPath.getParent());
+                    }
+
+                    long written = copyZipEntry(zis, extractedPath, maxEntryBytes);
+                    totalBytes += written;
+                    fileCount++;
+
+                    if (totalBytes > maxTotalBytes) {
+                        throw new RuntimeException("ZIP 解压后总体积过大");
+                    }
+                    if (fileCount > maxFileCount) {
+                        throw new RuntimeException("ZIP 内文件数量过多");
+                    }
+
+                    String ext = getExtension(extractedPath.getFileName().toString());
+                    if (!isImportableExtension(ext)) {
+                        continue;
+                    }
+
+                    results.add(importExtractedProjectFile(knowledgeBase, extractedPath, entryName, zipName, request));
+                }
+            }
+
+            refreshKnowledgeBaseStats(knowledgeBaseId, null);
+            return results;
+        } catch (IOException ex) {
+            throw new RuntimeException("ZIP 导入失败: " + trimError(ex.getMessage()), ex);
+        } finally {
+            if (tempDir != null) {
+                try {
+                    FileSystemUtils.deleteRecursively(tempDir);
+                } catch (IOException ignored) {
+                }
+            }
+        }
+    }
+
+    @Override
     @Transactional(readOnly = true)
     public Page<KnowledgeDocument> pageDocuments(Long knowledgeBaseId, Pageable pageable) {
         return knowledgeDocumentRepository.findByKnowledgeBase_IdOrderByUpdatedAtDesc(knowledgeBaseId, pageable);
@@ -238,12 +283,12 @@ public class KnowledgeBaseServiceImpl implements KnowledgeBaseService {
 
         try {
             if (document.hasStoredFile()) {
-                Path path = resolveStoredPath(document.getStoragePath());
-                if (Files.exists(path)) {
-                    String fileName = StringUtils.hasText(document.getFileName()) ? document.getFileName() : path.getFileName().toString();
-                    String contentType = resolveMimeType(path, fileName, document.getMimeType());
-                    return new KnowledgeDocumentBinary(fileName, contentType, Files.readAllBytes(path));
-                }
+                Path storedPath = resolveStoredPath(document.getStoragePath());
+                return new KnowledgeDocumentBinary(
+                        ensureDownloadFileName(document),
+                        resolveMimeType(storedPath, document.getFileName(), MediaType.APPLICATION_OCTET_STREAM_VALUE),
+                        Files.readAllBytes(storedPath)
+                );
             }
 
             String fallbackName = ensureTextFileName(resolveDocumentTitle(document.getTitle(), document.getFileName(), document.getContentText()));
@@ -265,18 +310,33 @@ public class KnowledgeBaseServiceImpl implements KnowledgeBaseService {
 
         try (ByteArrayOutputStream bos = new ByteArrayOutputStream();
              ZipOutputStream zos = new ZipOutputStream(bos, StandardCharsets.UTF_8)) {
-
             Set<String> usedNames = new HashSet<>();
+
             for (KnowledgeDocument document : documents) {
-                KnowledgeDocumentBinary binary = downloadDocument(document.getId());
-                String entryName = uniqueEntryName(binary.getFileName(), usedNames);
+                byte[] content;
+                String entryName;
+
+                if (document.hasStoredFile()) {
+                    Path storedPath = resolveStoredPath(document.getStoragePath());
+                    content = Files.readAllBytes(storedPath);
+                    entryName = ensureUniqueFileName(usedNames, ensureDownloadFileName(document));
+                } else {
+                    String text = normalizeContent(document.getContentText());
+                    content = text.getBytes(StandardCharsets.UTF_8);
+                    entryName = ensureUniqueFileName(usedNames,
+                            ensureTextFileName(resolveDocumentTitle(document.getTitle(), document.getFileName(), text)));
+                }
+
                 zos.putNextEntry(new ZipEntry(entryName));
-                zos.write(binary.getContent());
+                zos.write(content);
                 zos.closeEntry();
             }
             zos.finish();
-            String zipName = safeFileComponent(knowledgeBase.getName()) + "-documents.zip";
-            return new KnowledgeDocumentBinary(zipName, "application/zip", bos.toByteArray());
+            return new KnowledgeDocumentBinary(
+                    sanitizeFileName(knowledgeBase.getName()) + "-documents.zip",
+                    "application/zip",
+                    bos.toByteArray()
+            );
         } catch (IOException ex) {
             throw new RuntimeException("打包下载失败: " + ex.getMessage(), ex);
         }
@@ -354,62 +414,46 @@ public class KnowledgeBaseServiceImpl implements KnowledgeBaseService {
         if (task.getCreatedAt() == null) {
             task.setCreatedAt(Instant.now());
         }
-        KnowledgeIndexTask savedTask = knowledgeIndexTaskRepository.save(task);
 
+        KnowledgeIndexTask savedTask = knowledgeIndexTaskRepository.save(task);
         try {
             runTask(savedTask);
             savedTask.setStatus(KnowledgeIndexTask.Status.SUCCESS);
             savedTask.setErrorMessage(null);
-            savedTask.setFinishedAt(Instant.now());
-            knowledgeIndexTaskRepository.save(savedTask);
         } catch (Exception ex) {
             savedTask.setStatus(KnowledgeIndexTask.Status.FAILED);
             savedTask.setErrorMessage(trimError(ex.getMessage()));
-            savedTask.setFinishedAt(Instant.now());
-            knowledgeIndexTaskRepository.save(savedTask);
-
-            if (savedTask.getDocument() != null) {
-                KnowledgeDocument document = savedTask.getDocument();
-                document.setStatus(KnowledgeDocument.Status.FAILED);
-                document.setErrorMessage(trimError(savedTask.getErrorMessage()));
-                document.setUpdatedAt(Instant.now());
-                knowledgeDocumentRepository.save(document);
-            }
-
-            KnowledgeBase knowledgeBase = savedTask.getKnowledgeBase();
-            knowledgeBase.setStatus(KnowledgeBase.Status.FAILED);
-            knowledgeBase.setUpdatedAt(Instant.now());
-            knowledgeBaseRepository.save(knowledgeBase);
         }
-
-        return savedTask;
+        savedTask.setFinishedAt(Instant.now());
+        return knowledgeIndexTaskRepository.save(savedTask);
     }
 
     private void runTask(KnowledgeIndexTask task) {
         KnowledgeBase knowledgeBase = task.getKnowledgeBase();
-        if (knowledgeBase == null || knowledgeBase.getId() == null) {
-            throw new IllegalArgumentException("知识库不能为空");
+        if (knowledgeBase == null) {
+            throw new IllegalArgumentException("知识库不存在");
         }
+        knowledgeBase.setStatus(KnowledgeBase.Status.INDEXING);
+        knowledgeBase.setUpdatedAt(Instant.now());
+        knowledgeBaseRepository.save(knowledgeBase);
 
         if (task.getDocument() != null) {
-            runTaskForDocument(knowledgeBase, task.getDocument(), task.getTaskType());
+            runTaskOnDocument(knowledgeBase, loadDocument(knowledgeBase.getId(), task.getDocument().getId()), task.getTaskType());
         } else {
             List<KnowledgeDocument> documents = knowledgeDocumentRepository.findByKnowledgeBase_IdOrderByIdAsc(knowledgeBase.getId());
             for (KnowledgeDocument document : documents) {
-                runTaskForDocument(knowledgeBase, document, task.getTaskType());
+                if (document.getStatus() == KnowledgeDocument.Status.DISABLED) {
+                    continue;
+                }
+                runTaskOnDocument(knowledgeBase, document, task.getTaskType());
             }
         }
 
-        Instant indexedAt = task.getTaskType() == KnowledgeIndexTask.TaskType.PARSE ? null : Instant.now();
-        refreshKnowledgeBaseStats(knowledgeBase.getId(), indexedAt);
+        refreshKnowledgeBaseStats(knowledgeBase.getId(), KnowledgeBase.Status.ACTIVE);
     }
 
-    private void runTaskForDocument(KnowledgeBase knowledgeBase,
-                                    KnowledgeDocument document,
-                                    KnowledgeIndexTask.TaskType taskType) {
-        KnowledgeDocument managedDocument = loadDocument(knowledgeBase.getId(), document.getId());
-
-        switch (taskType) {
+    private void runTaskOnDocument(KnowledgeBase knowledgeBase, KnowledgeDocument managedDocument, KnowledgeIndexTask.TaskType taskType) {
+        switch (taskType == null ? KnowledgeIndexTask.TaskType.REINDEX : taskType) {
             case PARSE -> parseDocument(managedDocument);
             case CHUNK -> {
                 parseDocument(managedDocument);
@@ -437,7 +481,6 @@ public class KnowledgeBaseServiceImpl implements KnowledgeBaseService {
         if (!StringUtils.hasText(content)) {
             throw new IllegalArgumentException("文档内容不能为空");
         }
-
         document.setTitle(resolveDocumentTitle(document.getTitle(), document.getFileName(), content));
         document.setContentText(content);
         document.setContentHash(StringUtils.hasText(document.getContentHash()) ? document.getContentHash().trim() : sha256(content));
@@ -449,40 +492,42 @@ public class KnowledgeBaseServiceImpl implements KnowledgeBaseService {
 
     private void rebuildChunks(KnowledgeBase knowledgeBase, KnowledgeDocument document) {
         knowledgeChunkRepository.deleteByDocumentId(document.getId());
-        knowledgeChunkRepository.flush();
 
-        List<String> contents = splitIntoChunks(document.getContentText(), knowledgeBase.getChunkStrategy());
+        List<String> texts = splitIntoChunks(document.getContentText(), knowledgeBase.getChunkStrategy());
+        if (texts.isEmpty()) {
+            document.setStatus(KnowledgeDocument.Status.FAILED);
+            document.setErrorMessage("切片结果为空");
+            document.setUpdatedAt(Instant.now());
+            knowledgeDocumentRepository.save(document);
+            return;
+        }
+
         List<KnowledgeChunk> chunks = new ArrayList<>();
         Instant now = Instant.now();
-
-        for (int i = 0; i < contents.size(); i++) {
-            String content = contents.get(i);
-            if (!StringUtils.hasText(content)) {
+        for (int i = 0; i < texts.size(); i++) {
+            String text = normalizeContent(texts.get(i));
+            if (!StringUtils.hasText(text)) {
                 continue;
             }
-
             KnowledgeChunk chunk = new KnowledgeChunk();
             chunk.setKnowledgeBase(knowledgeBase);
             chunk.setDocument(document);
             chunk.setChunkIndex(i);
-            chunk.setContent(content);
-            chunk.setTokenCount(estimateTokens(content));
-            chunk.setEmbeddingProvider(trimToNull(knowledgeBase.getEmbeddingProvider()));
-            chunk.setEmbeddingModel(trimToNull(knowledgeBase.getEmbeddingModel()));
-            chunk.setVectorId(null);
-            chunk.setMetadataJson(buildChunkMetadata(knowledgeBase, document, i, content));
+            chunk.setContent(text);
+            chunk.setTokenCount(estimateTokens(text));
+            chunk.setMetadataJson(buildChunkMetadata(document, text, i));
             chunk.setCreatedAt(now);
             chunks.add(chunk);
         }
 
         if (!chunks.isEmpty()) {
             knowledgeChunkRepository.saveAll(chunks);
-            knowledgeChunkRepository.flush();
-            markDocumentIndexed(document);
-        } else {
+        }
+
+        if (knowledgeBase.getSourceType() == KnowledgeBase.SourceType.PROJECT_DOC || document.getSourceType() == KnowledgeDocument.SourceType.PROJECT_DOC) {
             document.setStatus(KnowledgeDocument.Status.UPLOADED);
-            document.setUpdatedAt(Instant.now());
-            knowledgeDocumentRepository.save(document);
+        } else {
+            markDocumentIndexed(document);
         }
     }
 
@@ -496,11 +541,22 @@ public class KnowledgeBaseServiceImpl implements KnowledgeBaseService {
         for (KnowledgeChunk chunk : chunks) {
             chunk.setEmbeddingProvider(trimToNull(knowledgeBase.getEmbeddingProvider()));
             chunk.setEmbeddingModel(trimToNull(knowledgeBase.getEmbeddingModel()));
-            chunk.setVectorId(null);
-            chunk.setMetadataJson(buildChunkMetadata(knowledgeBase, document, chunk.getChunkIndex(), chunk.getContent()));
-            chunk.setCreatedAt(chunk.getCreatedAt() == null ? now : chunk.getCreatedAt());
+            if (!StringUtils.hasText(chunk.getVectorId())) {
+                chunk.setVectorId(UUID.randomUUID().toString().replace("-", ""));
+            }
+            if (chunk.getCreatedAt() == null) {
+                chunk.setCreatedAt(now);
+            }
         }
         knowledgeChunkRepository.saveAll(chunks);
+
+        if (!chunks.isEmpty()) {
+            markDocumentIndexed(document);
+        } else {
+            document.setStatus(KnowledgeDocument.Status.UPLOADED);
+            document.setUpdatedAt(Instant.now());
+            knowledgeDocumentRepository.save(document);
+        }
     }
 
     private void markDocumentIndexed(KnowledgeDocument document) {
@@ -510,7 +566,6 @@ public class KnowledgeBaseServiceImpl implements KnowledgeBaseService {
         document.setUpdatedAt(Instant.now());
         knowledgeDocumentRepository.save(document);
     }
-
 
     private KnowledgeDocument uploadSingleDocument(KnowledgeBase knowledgeBase,
                                                    MultipartFile file,
@@ -535,6 +590,7 @@ public class KnowledgeBaseServiceImpl implements KnowledgeBaseService {
             Path storedPath = storeUploadedFile(knowledgeBase.getId(), file, originalFileName);
             String extractedText = extractTextFromFile(storedPath, originalFileName, entity.getMimeType());
             String normalizedText = normalizeContent(extractedText);
+
             if (!StringUtils.hasText(normalizedText)) {
                 entity.setTitle(resolveDocumentTitle(request == null ? null : request.getTitle(), originalFileName, ""));
                 entity.setStoragePath(toRelativeStoragePath(storedPath));
@@ -543,7 +599,7 @@ public class KnowledgeBaseServiceImpl implements KnowledgeBaseService {
                 return knowledgeDocumentRepository.save(entity);
             }
 
-            entity.setTitle(resolveUploadedTitle(request == null ? null : request.getTitle(), originalFileName, normalizedText, singleFile));
+            entity.setTitle(resolveDocumentTitle(singleFile && request != null ? request.getTitle() : null, originalFileName, normalizedText));
             entity.setStoragePath(toRelativeStoragePath(storedPath));
             entity.setContentText(normalizedText);
             entity.setContentHash(sha256(normalizedText));
@@ -553,6 +609,53 @@ public class KnowledgeBaseServiceImpl implements KnowledgeBaseService {
             return persistDocumentAndMaybeIndex(knowledgeBase, entity, shouldAutoIndex(request));
         } catch (Exception ex) {
             entity.setTitle(resolveDocumentTitle(request == null ? null : request.getTitle(), originalFileName, ""));
+            entity.setStatus(KnowledgeDocument.Status.FAILED);
+            entity.setErrorMessage(trimError(ex.getMessage()));
+            return knowledgeDocumentRepository.save(entity);
+        }
+    }
+
+    private KnowledgeDocument importExtractedProjectFile(KnowledgeBase knowledgeBase,
+                                                         Path extractedPath,
+                                                         String entryPath,
+                                                         String zipName,
+                                                         KnowledgeDocumentCreateRequest request) {
+        String fileName = sanitizeFileName(extractedPath.getFileName().toString());
+        Instant now = Instant.now();
+
+        KnowledgeDocument entity = new KnowledgeDocument();
+        entity.setKnowledgeBase(knowledgeBase);
+        entity.setSourceType(KnowledgeDocument.SourceType.PROJECT_DOC);
+        entity.setSourceRefId(request == null ? null : request.getSourceRefId());
+        entity.setSourceUrl(entryPath);
+        entity.setFileName(fileName);
+        entity.setTitle(entryPath);
+        entity.setMimeType(resolveMimeType(extractedPath, fileName, MediaType.APPLICATION_OCTET_STREAM_VALUE));
+        entity.setLanguage(trimToNull(request == null ? null : request.getLanguage()));
+        entity.setUploadedBy(request == null ? null : request.getUploadedBy());
+        entity.setCreatedAt(now);
+        entity.setUpdatedAt(now);
+
+        try {
+            Path storedPath = storePathFile(knowledgeBase.getId(), extractedPath, fileName);
+            String extractedText = extractTextFromFile(storedPath, fileName, entity.getMimeType());
+            String normalizedText = normalizeContent(extractedText);
+
+            if (!StringUtils.hasText(normalizedText)) {
+                entity.setStoragePath(toRelativeStoragePath(storedPath));
+                entity.setStatus(KnowledgeDocument.Status.FAILED);
+                entity.setErrorMessage("未能从项目文件中提取到正文内容");
+                return knowledgeDocumentRepository.save(entity);
+            }
+
+            entity.setStoragePath(toRelativeStoragePath(storedPath));
+            entity.setContentText(normalizedText);
+            entity.setContentHash(sha256(normalizedText));
+            entity.setErrorMessage(null);
+            entity.setStatus(KnowledgeDocument.Status.UPLOADED);
+
+            return persistDocumentAndMaybeIndex(knowledgeBase, entity, true);
+        } catch (Exception ex) {
             entity.setStatus(KnowledgeDocument.Status.FAILED);
             entity.setErrorMessage(trimError(ex.getMessage()));
             return knowledgeDocumentRepository.save(entity);
@@ -576,8 +679,8 @@ public class KnowledgeBaseServiceImpl implements KnowledgeBaseService {
         autoTask.setStatus(KnowledgeIndexTask.Status.PENDING);
         autoTask.setRetryCount(0);
         autoTask.setCreatedAt(Instant.now());
-
         KnowledgeIndexTask task = executeTask(autoTask);
+
         if (task.getStatus() == KnowledgeIndexTask.Status.FAILED) {
             KnowledgeDocument failed = knowledgeDocumentRepository.findById(saved.getId()).orElse(saved);
             failed.setStatus(KnowledgeDocument.Status.FAILED);
@@ -611,13 +714,27 @@ public class KnowledgeBaseServiceImpl implements KnowledgeBaseService {
         Path baseDir = ensureStorageDirectory();
         String safeName = sanitizeFileName(originalFileName);
         String storedName = UUID.randomUUID().toString().replace("-", "") + "-" + safeName;
+
         Path targetDir = baseDir.resolve(String.valueOf(knowledgeBaseId));
         Files.createDirectories(targetDir);
-        Path targetPath = targetDir.resolve(storedName).normalize();
 
+        Path targetPath = targetDir.resolve(storedName).normalize();
         try (InputStream inputStream = file.getInputStream()) {
             Files.copy(inputStream, targetPath, StandardCopyOption.REPLACE_EXISTING);
         }
+        return targetPath;
+    }
+
+    private Path storePathFile(Long knowledgeBaseId, Path sourcePath, String originalFileName) throws IOException {
+        Path baseDir = ensureStorageDirectory();
+        String safeName = sanitizeFileName(originalFileName);
+        String storedName = UUID.randomUUID().toString().replace("-", "") + "-" + safeName;
+
+        Path targetDir = baseDir.resolve(String.valueOf(knowledgeBaseId));
+        Files.createDirectories(targetDir);
+
+        Path targetPath = targetDir.resolve(storedName).normalize();
+        Files.copy(sourcePath, targetPath, StandardCopyOption.REPLACE_EXISTING);
         return targetPath;
     }
 
@@ -636,59 +753,67 @@ public class KnowledgeBaseServiceImpl implements KnowledgeBaseService {
         if (!StringUtils.hasText(storagePath)) {
             throw new RuntimeException("文档没有可下载的原始文件");
         }
-        Path path = Paths.get(storagePath);
-        if (path.isAbsolute()) {
-            return path.normalize();
+        Path baseDir = ensureStorageDirectory();
+        Path path = baseDir.resolve(storagePath).normalize();
+        if (!path.startsWith(baseDir)) {
+            throw new RuntimeException("非法文件路径");
         }
-        return ensureStorageDirectory().resolve(storagePath).normalize();
+        if (!Files.exists(path)) {
+            throw new RuntimeException("原始文件不存在");
+        }
+        return path;
     }
 
     private String extractTextFromFile(Path storedPath, String originalFileName, String mimeType) throws IOException {
         String ext = getExtension(originalFileName);
-        return switch (ext) {
-            case "pdf" -> extractPdfText(storedPath);
-            case "docx" -> extractDocxText(storedPath);
-            case "doc" -> extractDocText(storedPath);
-            default -> extractPlainText(storedPath, mimeType, ext);
-        };
-    }
-
-    private String extractPdfText(Path path) throws IOException {
-        try (PDDocument document = Loader.loadPDF(path.toFile())) {
-            PDFTextStripper stripper = new PDFTextStripper();
-            return stripper.getText(document);
+        if ("pdf".equals(ext)) {
+            try (PDDocument document = Loader.loadPDF(Files.readAllBytes(storedPath))) {
+                return new PDFTextStripper().getText(document);
+            }
         }
-    }
-
-    private String extractDocxText(Path path) throws IOException {
-        try (InputStream inputStream = Files.newInputStream(path);
-             XWPFDocument document = new XWPFDocument(inputStream);
-             XWPFWordExtractor extractor = new XWPFWordExtractor(document)) {
-            return extractor.getText();
+        if ("docx".equals(ext)) {
+            try (InputStream inputStream = Files.newInputStream(storedPath);
+                 XWPFDocument document = new XWPFDocument(inputStream);
+                 XWPFWordExtractor extractor = new XWPFWordExtractor(document)) {
+                return extractor.getText();
+            }
         }
-    }
-
-    private String extractDocText(Path path) throws IOException {
-        try (InputStream inputStream = Files.newInputStream(path);
-             HWPFDocument document = new HWPFDocument(inputStream);
-             WordExtractor extractor = new WordExtractor(document)) {
-            return extractor.getText();
+        if ("doc".equals(ext)) {
+            try (InputStream inputStream = Files.newInputStream(storedPath);
+                 HWPFDocument document = new HWPFDocument(inputStream);
+                 WordExtractor extractor = new WordExtractor(document)) {
+                return extractor.getText();
+            }
         }
-    }
-
-    private String extractPlainText(Path path, String mimeType, String ext) throws IOException {
-        if (isSupportedTextExtension(ext) || (mimeType != null && mimeType.startsWith("text/"))) {
-            byte[] bytes = Files.readAllBytes(path);
-            String text = new String(bytes, StandardCharsets.UTF_8);
-            return stripUtf8Bom(text);
+        if (isTextLikeExtension(ext) || isTextLikeMimeType(mimeType)) {
+            return stripUtf8Bom(Files.readString(storedPath, StandardCharsets.UTF_8));
         }
-        throw new IllegalArgumentException("暂不支持解析该文件类型: " + ext);
+        return "";
     }
 
-    private boolean isSupportedTextExtension(String ext) {
+    private boolean isTextLikeMimeType(String mimeType) {
+        if (!StringUtils.hasText(mimeType)) return false;
+        String lower = mimeType.toLowerCase(Locale.ROOT);
+        return lower.startsWith("text/")
+                || lower.contains("json")
+                || lower.contains("xml")
+                || lower.contains("javascript")
+                || lower.contains("typescript")
+                || lower.contains("sql")
+                || lower.contains("yaml");
+    }
+
+    private boolean isTextLikeExtension(String ext) {
         return Set.of(
                 "txt", "md", "markdown", "json", "csv", "js", "ts", "java", "xml", "html", "htm",
                 "css", "vue", "sql", "yml", "yaml", "properties", "log", "text"
+        ).contains(ext);
+    }
+
+    private boolean isImportableExtension(String ext) {
+        return Set.of(
+                "txt", "md", "markdown", "json", "csv", "js", "ts", "java", "xml", "html", "htm",
+                "css", "vue", "sql", "yml", "yaml", "properties", "log", "text", "pdf", "doc", "docx"
         ).contains(ext);
     }
 
@@ -714,7 +839,7 @@ public class KnowledgeBaseServiceImpl implements KnowledgeBaseService {
         if (!StringUtils.hasText(fileName) || !fileName.contains(".")) {
             return "";
         }
-        return fileName.substring(fileName.lastIndexOf('.') + 1).trim().toLowerCase();
+        return fileName.substring(fileName.lastIndexOf('.') + 1).trim().toLowerCase(Locale.ROOT);
     }
 
     private String resolveMimeType(MultipartFile file, String fileName) {
@@ -733,77 +858,234 @@ public class KnowledgeBaseServiceImpl implements KnowledgeBaseService {
             }
         } catch (IOException ignored) {
         }
-        String guessed = URLConnection.guessContentTypeFromName(fileName);
-        if (StringUtils.hasText(guessed)) {
-            return guessed;
+
+        String ext = getExtension(fileName);
+        return switch (ext) {
+            case "pdf" -> "application/pdf";
+            case "doc" -> "application/msword";
+            case "docx" -> "application/vnd.openxmlformats-officedocument.wordprocessingml.document";
+            case "md", "markdown" -> "text/markdown";
+            case "json" -> "application/json";
+            case "xml" -> "application/xml";
+            case "html", "htm" -> "text/html";
+            case "css" -> "text/css";
+            case "js" -> "application/javascript";
+            case "ts" -> "application/typescript";
+            case "java", "txt", "text", "log", "properties", "sql", "yml", "yaml", "vue" -> "text/plain";
+            default -> StringUtils.hasText(fallback) ? fallback : MediaType.APPLICATION_OCTET_STREAM_VALUE;
+        };
+    }
+
+    private String normalizeContent(String text) {
+        if (text == null) {
+            return null;
         }
-        return StringUtils.hasText(fallback) ? fallback : "application/octet-stream";
+        String normalized = stripUtf8Bom(text)
+                .replace("\r\n", "\n")
+                .replace("\r", "\n");
+        normalized = normalized.replaceAll("\u0000", "");
+        normalized = normalized.replaceAll("[\\t\\u000B\\f]+", " ");
+        normalized = normalized.replaceAll("(?m)[ \t]+$", "");
+        normalized = normalized.replaceAll("\n{3,}", "\n\n").trim();
+        return normalized;
     }
 
-    private String resolveUploadedTitle(String requestTitle, String originalFileName, String contentText, boolean singleFile) {
-        if (singleFile && StringUtils.hasText(requestTitle)) {
-            return requestTitle.trim();
+    private String resolveDocumentTitle(String title, String fileName, String contentText) {
+        if (StringUtils.hasText(title)) {
+            return trimToNull(title);
         }
-        return resolveDocumentTitle(null, originalFileName, contentText);
-    }
-
-    private String ensureTextFileName(String baseName) {
-        String safe = safeFileComponent(baseName);
-        if (!safe.endsWith(".txt")) {
-            safe = safe + ".txt";
+        if (StringUtils.hasText(fileName)) {
+            return sanitizeFileName(fileName);
         }
-        return safe;
+        if (StringUtils.hasText(contentText)) {
+            String firstLine = normalizeContent(contentText);
+            if (StringUtils.hasText(firstLine)) {
+                int idx = firstLine.indexOf('\n');
+                String candidate = idx >= 0 ? firstLine.substring(0, idx) : firstLine;
+                candidate = candidate.trim();
+                if (candidate.length() > 120) {
+                    candidate = candidate.substring(0, 120);
+                }
+                if (StringUtils.hasText(candidate)) {
+                    return candidate;
+                }
+            }
+        }
+        return "未命名文档";
     }
 
-    private String safeFileComponent(String name) {
-        String candidate = sanitizeFileName(name);
-        return candidate.isBlank() ? "knowledge-document" : candidate;
+    private String ensureDownloadFileName(KnowledgeDocument document) {
+        String candidate = trimToNull(document.getFileName());
+        if (!StringUtils.hasText(candidate)) {
+            candidate = ensureTextFileName(resolveDocumentTitle(document.getTitle(), null, document.getContentText()));
+        }
+        return sanitizeFileName(candidate);
     }
 
-    private String uniqueEntryName(String name, Set<String> usedNames) {
-        String safeName = safeFileComponent(name);
-        if (!usedNames.contains(safeName)) {
-            usedNames.add(safeName);
-            return safeName;
+    private String ensureTextFileName(String fileName) {
+        String safe = sanitizeFileName(fileName);
+        return safe.contains(".") ? safe : safe + ".txt";
+    }
+
+    private String ensureUniqueFileName(Set<String> usedNames, String fileName) {
+        String safe = sanitizeFileName(fileName);
+        if (usedNames.add(safe)) {
+            return safe;
         }
         String ext = "";
-        String base = safeName;
-        int dotIndex = safeName.lastIndexOf('.');
-        if (dotIndex > 0) {
-            base = safeName.substring(0, dotIndex);
-            ext = safeName.substring(dotIndex);
+        String name = safe;
+        int idx = safe.lastIndexOf('.');
+        if (idx > 0) {
+            ext = safe.substring(idx);
+            name = safe.substring(0, idx);
         }
         int seq = 2;
         while (true) {
-            String candidate = base + "-" + seq + ext;
-            if (!usedNames.contains(candidate)) {
-                usedNames.add(candidate);
+            String candidate = name + "_" + seq + ext;
+            if (usedNames.add(candidate)) {
                 return candidate;
             }
             seq++;
         }
     }
 
-    private void refreshKnowledgeBaseStats(Long knowledgeBaseId, Instant indexedAt) {
-        KnowledgeBase knowledgeBase = getById(knowledgeBaseId);
-        int docCount = Math.toIntExact(knowledgeDocumentRepository.countByKnowledgeBase_Id(knowledgeBaseId));
-        int chunkCount = Math.toIntExact(knowledgeChunkRepository.countByKnowledgeBase_Id(knowledgeBaseId));
+    private String buildChunkMetadata(KnowledgeDocument document, String text, int index) {
+        Map<String, Object> metadata = new LinkedHashMap<>();
+        metadata.put("documentId", document.getId());
+        metadata.put("title", document.getTitle());
+        metadata.put("fileName", document.getFileName());
+        metadata.put("sourceType", document.getSourceType() == null ? null : document.getSourceType().name());
+        metadata.put("sourceUrl", document.getSourceUrl());
+        metadata.put("chunkIndex", index);
+        metadata.put("tokenCount", estimateTokens(text));
+        return toJson(metadata);
+    }
 
-        knowledgeBase.setDocCount(docCount);
-        knowledgeBase.setChunkCount(chunkCount);
+    private String toJson(Object value) {
+        try {
+            return objectMapper.writeValueAsString(value);
+        } catch (JsonProcessingException e) {
+            return "{}";
+        }
+    }
 
-        if (chunkCount > 0) {
-            knowledgeBase.setStatus(KnowledgeBase.Status.ACTIVE);
-            knowledgeBase.setLastIndexedAt(indexedAt == null ? knowledgeBase.getLastIndexedAt() : indexedAt);
-        } else if (docCount > 0) {
-            knowledgeBase.setStatus(KnowledgeBase.Status.DRAFT);
-        } else {
-            knowledgeBase.setStatus(KnowledgeBase.Status.DRAFT);
-            knowledgeBase.setLastIndexedAt(null);
+    private String sha256(String raw) {
+        try {
+            MessageDigest md = MessageDigest.getInstance("SHA-256");
+            byte[] digest = md.digest((raw == null ? "" : raw).getBytes(StandardCharsets.UTF_8));
+            StringBuilder sb = new StringBuilder(digest.length * 2);
+            for (byte b : digest) {
+                sb.append(String.format("%02x", b));
+            }
+            return sb.toString();
+        } catch (Exception ex) {
+            throw new RuntimeException("计算内容哈希失败", ex);
+        }
+    }
+
+    private String trimToNull(String value) {
+        if (value == null) {
+            return null;
+        }
+        String trimmed = value.trim();
+        return trimmed.isEmpty() ? null : trimmed;
+    }
+
+    private String trimError(String error) {
+        if (!StringUtils.hasText(error)) {
+            return "未知错误";
+        }
+        String trimmed = error.replaceAll("[\r\n]+", " ").trim();
+        return trimmed.length() > 500 ? trimmed.substring(0, 500) : trimmed;
+    }
+
+    private int estimateTokens(String content) {
+        if (!StringUtils.hasText(content)) {
+            return 0;
+        }
+        return Math.max(1, content.length() / 4);
+    }
+
+    private List<String> splitIntoChunks(String content, KnowledgeBase.ChunkStrategy strategy) {
+        String normalized = normalizeContent(content);
+        if (!StringUtils.hasText(normalized)) {
+            return List.of();
         }
 
-        knowledgeBase.setUpdatedAt(Instant.now());
-        knowledgeBaseRepository.save(knowledgeBase);
+        KnowledgeBase.ChunkStrategy actualStrategy = strategy == null ? KnowledgeBase.ChunkStrategy.PARAGRAPH : strategy;
+        return switch (actualStrategy) {
+            case FIXED -> splitFixed(normalized);
+            case MARKDOWN -> splitMarkdown(normalized);
+            case CUSTOM, PARAGRAPH -> splitByBlocks(normalized);
+        };
+    }
+
+    private List<String> splitFixed(String content) {
+        List<String> result = new ArrayList<>();
+        int start = 0;
+        while (start < content.length()) {
+            int end = Math.min(content.length(), start + FIXED_CHUNK_SIZE);
+            String chunk = content.substring(start, end).trim();
+            if (!chunk.isEmpty()) {
+                result.add(chunk);
+            }
+            if (end >= content.length()) {
+                break;
+            }
+            start = Math.max(end - FIXED_CHUNK_OVERLAP, start + 1);
+        }
+        return result;
+    }
+
+    private List<String> splitMarkdown(String content) {
+        String normalized = content.replaceAll("(?m)(^#{1,6}\\s+)", "\n\n$1");
+        return splitByBlocks(normalized);
+    }
+
+    private List<String> splitByBlocks(String content) {
+        List<String> blocks = Arrays.stream(content.split("\n\n+"))
+                .map(String::trim)
+                .filter(StringUtils::hasText)
+                .toList();
+        return mergeBlocks(blocks);
+    }
+
+    private List<String> mergeBlocks(List<String> blocks) {
+        if (blocks.isEmpty()) {
+            return List.of();
+        }
+
+        List<String> result = new ArrayList<>();
+        StringBuilder current = new StringBuilder();
+
+        for (String block : blocks) {
+            if (block.length() > BLOCK_CHUNK_MAX_LENGTH) {
+                if (current.length() > 0) {
+                    result.add(current.toString().trim());
+                    current.setLength(0);
+                }
+                result.addAll(splitFixed(block));
+                continue;
+            }
+
+            if (current.length() == 0) {
+                current.append(block);
+                continue;
+            }
+
+            if (current.length() + 2 + block.length() <= BLOCK_CHUNK_MAX_LENGTH) {
+                current.append("\n\n").append(block);
+            } else {
+                result.add(current.toString().trim());
+                current.setLength(0);
+                current.append(block);
+            }
+        }
+
+        if (current.length() > 0) {
+            result.add(current.toString().trim());
+        }
+        return result;
     }
 
     private KnowledgeDocument loadDocument(Long knowledgeBaseId, Long documentId) {
@@ -823,13 +1105,13 @@ public class KnowledgeBaseServiceImpl implements KnowledgeBaseService {
             return;
         }
 
-        KnowledgeBaseMember owner = new KnowledgeBaseMember();
-        owner.setKnowledgeBase(knowledgeBase);
-        owner.setUserId(knowledgeBase.getOwnerId());
-        owner.setRoleCode(KnowledgeBaseMember.RoleCode.OWNER);
-        owner.setGrantedBy(knowledgeBase.getOwnerId());
-        owner.setCreatedAt(Instant.now());
-        knowledgeBaseMemberRepository.save(owner);
+        KnowledgeBaseMember entity = new KnowledgeBaseMember();
+        entity.setKnowledgeBase(knowledgeBase);
+        entity.setUserId(knowledgeBase.getOwnerId());
+        entity.setRoleCode(KnowledgeBaseMember.RoleCode.OWNER);
+        entity.setGrantedBy(knowledgeBase.getOwnerId());
+        entity.setCreatedAt(Instant.now());
+        knowledgeBaseMemberRepository.save(entity);
     }
 
     private void validateKnowledgeBaseRequest(KnowledgeBaseCreateRequest request) {
@@ -859,199 +1141,90 @@ public class KnowledgeBaseServiceImpl implements KnowledgeBaseService {
     }
 
     private KnowledgeIndexTask.TaskType resolveTaskType(KnowledgeIndexTaskCreateRequest request) {
-        if (request == null || request.getTaskType() == null) {
-            return KnowledgeIndexTask.TaskType.REINDEX;
-        }
-        return request.getTaskType();
+        return request == null || request.getTaskType() == null ? KnowledgeIndexTask.TaskType.REINDEX : request.getTaskType();
     }
 
-    private int normalizeTopK(Integer topK) {
-        if (topK == null) {
-            return DEFAULT_TOP_K;
+    private void refreshKnowledgeBaseStats(Long knowledgeBaseId, KnowledgeBase.Status status) {
+        KnowledgeBase knowledgeBase = getById(knowledgeBaseId);
+        List<KnowledgeDocument> docs = knowledgeDocumentRepository.findByKnowledgeBase_IdOrderByIdAsc(knowledgeBaseId);
+
+        int docCount = docs.size();
+        int chunkCount = 0;
+        Instant lastIndexedAt = null;
+        for (KnowledgeDocument doc : docs) {
+            List<KnowledgeChunk> chunks = knowledgeChunkRepository.findByDocument_IdOrderByChunkIndexAsc(doc.getId());
+            chunkCount += chunks.size();
+            if (doc.getIndexedAt() != null && (lastIndexedAt == null || doc.getIndexedAt().isAfter(lastIndexedAt))) {
+                lastIndexedAt = doc.getIndexedAt();
+            }
         }
-        return Math.max(1, Math.min(topK, 20));
+
+        knowledgeBase.setDocCount(docCount);
+        knowledgeBase.setChunkCount(chunkCount);
+        knowledgeBase.setLastIndexedAt(lastIndexedAt);
+        if (status != null) {
+            knowledgeBase.setStatus(status);
+        } else if (docCount == 0) {
+            knowledgeBase.setStatus(KnowledgeBase.Status.DRAFT);
+        } else {
+            knowledgeBase.setStatus(KnowledgeBase.Status.ACTIVE);
+        }
+        knowledgeBase.setUpdatedAt(Instant.now());
+        knowledgeBaseRepository.save(knowledgeBase);
     }
 
-    private String resolveDocumentTitle(String title, String fileName, String contentText) {
-        if (StringUtils.hasText(title)) {
-            return title.trim();
-        }
-        if (StringUtils.hasText(fileName)) {
-            String sanitized = sanitizeFileName(fileName);
-            int dotIndex = sanitized.lastIndexOf('.');
-            return dotIndex > 0 ? sanitized.substring(0, dotIndex) : sanitized;
-        }
-        String normalized = normalizeContent(contentText);
-        if (!StringUtils.hasText(normalized)) {
-            return "未命名文档";
-        }
-        return normalized.length() <= 30 ? normalized : normalized.substring(0, 30);
-    }
-
-    private String normalizeContent(String text) {
-        if (!StringUtils.hasText(text)) {
-            return "";
-        }
-        String normalized = text.replace("\r\n", "\n").replace('\r', '\n');
-        List<String> lines = normalized.lines()
-                .map(String::stripTrailing)
-                .toList();
-        return String.join("\n", lines).trim();
-    }
-
-    private String trimToNull(String text) {
-        if (!StringUtils.hasText(text)) {
+    private String normalizeZipEntryName(String raw) {
+        if (!StringUtils.hasText(raw)) {
             return null;
         }
-        return text.trim();
-    }
-
-    private String trimError(String message) {
-        if (!StringUtils.hasText(message)) {
-            return "未知错误";
+        String s = raw.replace("\\", "/").trim();
+        while (s.startsWith("/")) {
+            s = s.substring(1);
         }
-        return message.length() > 500 ? message.substring(0, 500) : message;
+        return s;
     }
 
-    private int estimateTokens(String content) {
-        if (!StringUtils.hasText(content)) {
-            return 0;
-        }
-        return Math.max(1, content.length() / 4);
-    }
-
-    private List<String> splitIntoChunks(String content, KnowledgeBase.ChunkStrategy strategy) {
-        String normalized = normalizeContent(content);
-        if (!StringUtils.hasText(normalized)) {
-            return List.of();
-        }
-
-        KnowledgeBase.ChunkStrategy actualStrategy = strategy == null ? KnowledgeBase.ChunkStrategy.PARAGRAPH : strategy;
-        return switch (actualStrategy) {
-            case FIXED, CUSTOM -> splitFixed(normalized, FIXED_CHUNK_SIZE, FIXED_CHUNK_OVERLAP);
-            case PARAGRAPH -> splitByBlocks(normalized);
-            case MARKDOWN -> splitMarkdown(normalized);
-        };
-    }
-
-    private List<String> splitByBlocks(String content) {
-        String[] rawBlocks = content.split("\\n\\s*\\n+");
-        List<String> blocks = new ArrayList<>();
-        for (String raw : rawBlocks) {
-            String item = raw == null ? null : raw.trim();
-            if (StringUtils.hasText(item)) {
-                blocks.add(item);
-            }
-        }
-        return mergeBlocks(blocks);
-    }
-
-    private List<String> splitMarkdown(String content) {
-        String normalized = content.replaceAll("(?m)(^#{1,6}\\s+)", "\n\n$1");
-        return splitByBlocks(normalized);
-    }
-
-    private List<String> mergeBlocks(List<String> blocks) {
-        if (blocks.isEmpty()) {
-            return List.of();
-        }
-
-        List<String> result = new ArrayList<>();
-        StringBuilder current = new StringBuilder();
-
-        for (String block : blocks) {
-            if (block.length() > BLOCK_CHUNK_MAX_LENGTH) {
-                if (current.length() > 0) {
-                    result.add(current.toString().trim());
-                    current.setLength(0);
+    private long copyZipEntry(ZipInputStream zis, Path targetPath, long maxEntryBytes) throws IOException {
+        long total = 0L;
+        byte[] buffer = new byte[8192];
+        try (OutputStream os = Files.newOutputStream(targetPath)) {
+            int len;
+            while ((len = zis.read(buffer)) > 0) {
+                total += len;
+                if (total > maxEntryBytes) {
+                    throw new RuntimeException("ZIP 内单个文件过大: " + targetPath.getFileName());
                 }
-                result.addAll(splitFixed(block, FIXED_CHUNK_SIZE, FIXED_CHUNK_OVERLAP));
-                continue;
-            }
-
-            if (current.length() == 0) {
-                current.append(block);
-                continue;
-            }
-
-            if (current.length() + 2 + block.length() <= BLOCK_CHUNK_MAX_LENGTH) {
-                current.append("\n\n").append(block);
-            } else {
-                result.add(current.toString().trim());
-                current.setLength(0);
-                current.append(block);
+                os.write(buffer, 0, len);
             }
         }
-
-        if (current.length() > 0) {
-            result.add(current.toString().trim());
-        }
-
-        return result;
+        return total;
     }
 
-    private List<String> splitFixed(String content, int maxLength, int overlap) {
-        List<String> result = new ArrayList<>();
-        if (!StringUtils.hasText(content)) {
-            return result;
-        }
-
-        int safeMaxLength = Math.max(200, maxLength);
-        int safeOverlap = Math.max(0, Math.min(overlap, safeMaxLength - 50));
-        int start = 0;
-
-        while (start < content.length()) {
-            int end = Math.min(content.length(), start + safeMaxLength);
-            String part = content.substring(start, end).trim();
-            if (StringUtils.hasText(part)) {
-                result.add(part);
-            }
-            if (end >= content.length()) {
-                break;
-            }
-            start = Math.max(start + 1, end - safeOverlap);
-        }
-
-        return result;
-    }
-
-    private String buildChunkMetadata(KnowledgeBase knowledgeBase,
-                                      KnowledgeDocument document,
-                                      Integer chunkIndex,
-                                      String content) {
-        Map<String, Object> metadata = new LinkedHashMap<>();
-        metadata.put("knowledgeBaseId", knowledgeBase.getId());
-        metadata.put("knowledgeBaseName", knowledgeBase.getName());
-        metadata.put("documentId", document.getId());
-        metadata.put("documentTitle", document.getTitle());
-        metadata.put("sourceType", document.getSourceType() == null ? null : document.getSourceType().name());
-        metadata.put("sourceRefId", document.getSourceRefId());
-        metadata.put("chunkIndex", chunkIndex);
-        metadata.put("tokenCount", estimateTokens(content));
-        metadata.put("embeddingProvider", trimToNull(knowledgeBase.getEmbeddingProvider()));
-        metadata.put("embeddingModel", trimToNull(knowledgeBase.getEmbeddingModel()));
-        try {
-            return objectMapper.writeValueAsString(metadata);
-        } catch (JsonProcessingException e) {
-            return "{\"documentId\":" + document.getId() + ",\"chunkIndex\":" + chunkIndex + "}";
-        }
-    }
-
-    private String sha256(String text) {
-        try {
-            MessageDigest digest = MessageDigest.getInstance("SHA-256");
-            byte[] hash = digest.digest(text.getBytes(StandardCharsets.UTF_8));
-            StringBuilder sb = new StringBuilder(hash.length * 2);
-            for (byte b : hash) {
-                String hex = Integer.toHexString(b & 0xff);
-                if (hex.length() == 1) {
-                    sb.append('0');
-                }
-                sb.append(hex);
-            }
-            return sb.toString();
-        } catch (NoSuchAlgorithmException e) {
-            throw new IllegalStateException("SHA-256不可用");
-        }
+    private boolean shouldSkipProjectEntry(String entryPath) {
+        String s = entryPath.toLowerCase(Locale.ROOT);
+        return s.startsWith(".git/")
+                || s.contains("/.git/")
+                || s.startsWith("node_modules/")
+                || s.contains("/node_modules/")
+                || s.startsWith("target/")
+                || s.contains("/target/")
+                || s.startsWith("dist/")
+                || s.contains("/dist/")
+                || s.startsWith("build/")
+                || s.contains("/build/")
+                || s.startsWith(".idea/")
+                || s.contains("/.idea/")
+                || s.startsWith(".vscode/")
+                || s.contains("/.vscode/")
+                || s.endsWith(".png")
+                || s.endsWith(".jpg")
+                || s.endsWith(".jpeg")
+                || s.endsWith(".gif")
+                || s.endsWith(".webp")
+                || s.endsWith(".mp4")
+                || s.endsWith(".mp3")
+                || s.endsWith(".class")
+                || s.endsWith(".jar")
+                || s.endsWith(".exe");
     }
 }
